feat: API changes
- range may by float
- aircraft_type to model

(based on `cargo clippy` pendantic messages)
