# backend/src/api/state.rs
@@ -175,7 +175,7 @@ mod tests {
                 id: aircraft_id,
                 call_sign: String::from("G1"),
                 registration: String::from("D-6507"),
-                aircraft_type: String::from("ASK-21"),
+                model: String::from("ASK-21"),
                 visible: true,
             },
             position,
